# readyplot

./: .gitignore  DATA.xlsx  README.md  TEST_PLOTTER.ipynb  checker.py  pyproject.toml  setup.py  test_plotter.py
.github/workflows/: python-package.yml
readyplot/: __init__.py  bar_plotter.py  base_plotter.py  boxwhisker_plotter.py  hist_plotter.py  line_plotter.py  scatter_plotter.py  strip_plotter.py  subplots.py  utils.py
readyplot/.ipynb_checkpoints/: TEST_PLOTTER-checkpoint.ipynb
